--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "@astrojs/vue": "^5.1.3",
     "astro": "^5.16.3",
     "vue": "^3.5.25"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "sass-embedded": "^1.93.3",
+    "tailwindcss": "^3.4.18"
   }
 }
