--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -3,6 +3,10 @@ name: Astro Docker CI/CD Pipeline
 on:
   # Trigger: Allows manual execution from the GitHub Actions tab
   workflow_dispatch:
+  # Trigger: Automatic execution on push to main branch
+  push:
+    branches:
+      - main
 
 jobs:
   # ------------------------------------------------
